# jam

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-clippy.yml
protocol/: Cargo.toml
protocol-macro/: Cargo.toml
protocol-macro/src/: lib.rs
protocol/src/: array.rs  chat.rs  encoding.rs  lib.rs  position.rs  state.rs  varint.rs
protocol/src/encoding/: array.rs  chat.rs  mod.rs  numbers.rs  string.rs
protocol/src/packet/: mod.rs
protocol/src/packet/clientbound/: handshake.rs  login.rs  mod.rs  play.rs  status.rs
protocol/src/packet/serverbound/: handshaking.rs  login.rs  mod.rs  play.rs  status.rs
server/: Cargo.toml
server/src/: connection.rs  main.rs  server.rs  sync.rs
