[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
byteorder = "1.4.3"
paste = "1.0.11"
protocol-macro = { path = "../protocol-macro" }
quartz_nbt = "0.2.6"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
typed-builder = "0.12.0"
