[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
tokio = { version = "1.25.0", features = ["full"] }
protocol = { path = "../protocol" }
typed-builder = "0.12.0"
once_cell = "1.17.0"
bytes = "1.4.0"
serde_json = "1.0.93"
