[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
protocol = { path = "../protocol" }
typed-builder = "0.12.0"
once_cell = "1.17.0"
bytes = "1.4.0"
serde_json = "1.0.93"
bevy_ecs = "0.9.1"
bevy_tasks = "0.9.1"
tokio = { version = "1.25.0", features = ["full"] }
crossbeam-channel = "0.5.6"
